Created endpoint for getting a user by id
