# public/openapi.yaml
@@ -15,6 +15,8 @@
       description: Authentication related endpoints
     - name: comments
       description: Comment related endpoints
+    - name: users
+      description: User related endpoints
   paths:
     /user:
       post:
@@ -28,6 +30,28 @@
             'application/json':
               schema:
                 $ref: '#/components/schemas/user-post'
+        responses:
+          200:
+            description: OK
+            content:
+              'application/json':
+                schema:
+                  $ref: '#/components/schemas/user-get'
+    /user/{uuid}:
+      parameters:
+        - name: uuid
+          description: Unique identifier for the user
+          in: path
+          required: true
+          schema:
+            type: string
+            example: '780fdc7e-adeb-4cf5-9521-e53c52557a6d'
+      get:
+        summary: Get user
+        description: Get a user by ID
+        operationId: user-get
+        tags:
+          - users
         responses:
           200:
             description: OK
